@@ -1,8 +1,10 @@
 package com.learningspringboot.alugueldelivros.config;
 
+import com.learningspringboot.alugueldelivros.entities.Category;
 import com.learningspringboot.alugueldelivros.entities.Loan;
 import com.learningspringboot.alugueldelivros.entities.User;
 import com.learningspringboot.alugueldelivros.entities.enums.LoanStatus;
+import com.learningspringboot.alugueldelivros.repositories.CategoryRepository;
 import com.learningspringboot.alugueldelivros.repositories.LoanRepository;
 import com.learningspringboot.alugueldelivros.repositories.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -11,7 +13,7 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Profile;
 
 import java.time.Instant;
-import java.util.List;
+import java.util.Arrays;
 
 @Configuration
 @Profile("test")
@@ -22,6 +24,8 @@ public class TestConfig implements CommandLineRunner {
 
     @Autowired
     private LoanRepository loanRepository;
+    @Autowired
+    private CategoryRepository categoryRepository;
 
     @Override
     public void run(String...args) throws Exception {
@@ -32,8 +36,14 @@ public class TestConfig implements CommandLineRunner {
         Loan l2 = new Loan(null, Instant.parse("2026-03-21T03:42:10Z"), LoanStatus.valueOf(2), u2);
         Loan l3 = new Loan(null, Instant.parse("2026-03-22T15:21:22Z"), LoanStatus.valueOf(2), u1);
 
+        Category c1 = new Category(null, "Horror");
+        Category c2 = new Category(null, "Adventure");
+        Category c3 = new Category(null, "Romance");
 
-        userRepository.saveAll(List.of(u1,u2));
-        loanRepository.saveAll(List.of(l1, l2, l3));
+
+
+        userRepository.saveAll(Arrays.asList(u1,u2));
+        loanRepository.saveAll(Arrays.asList(l1, l2, l3));
+        categoryRepository.saveAll(Arrays.asList(c1, c2, c3));
     }
 }
